--- a/05-results.Rmd
+++ b/05-results.Rmd
@@ -42,6 +42,7 @@ nyc_arrests_by_category_year_boro <- (
     mutate(Rape = ifelse(grepl("RAPE",OFNS_DESC, fixed = TRUE), COUNT_OF_ARRESTS,
                          ifelse(grepl("SEX",OFNS_DESC, fixed = TRUE), COUNT_OF_ARRESTS, 0))) %>%
     mutate(Aggravated.Assault = ifelse(grepl("FELONY ASSAULT",OFNS_DESC, fixed = TRUE), COUNT_OF_ARRESTS, 0)) %>%
+    mutate(Robbery = ifelse(grepl("ROBBERY",OFNS_DESC, fixed = TRUE), COUNT_OF_ARRESTS, 0)) %>%
     mutate(Motor.Vehicle.Theft = ifelse(grepl("MOTOR",OFNS_DESC, fixed = TRUE), COUNT_OF_ARRESTS, 0))
 )
 
@@ -51,7 +52,8 @@ nyc_arrests_categories_simple <- (
     summarize(Murder = sum(Murder),
               Rape = sum(Rape),
               Aggravated.Assault = sum(Aggravated.Assault),
-              Motor.Vehicle.Theft = sum(Motor.Vehicle.Theft)
+              Motor.Vehicle.Theft = sum(Motor.Vehicle.Theft),
+              Robbery = sum(Robbery)
               ) %>%
     ungroup() %>%
     mutate(Category = "Arrests") %>%
@@ -126,6 +128,26 @@ ggplot(data = nyc_arrests_type, aes(x = fct_reorder(LAW_CAT_CD, Number_Arrests, 
 
 From the bar plot above, we can see that misdemeanor is the most common type of arrest in our dataset with over 2 million arrests that were related to misdemeanor charges. Felony is the next most common type of arrest with just under 1 million arrests while violations only account for around 200,000 arrests. There is also a small portion of arrests classified as `I`, but it is not exactly clear from the data dictionary what that stands for. There were also a small amount of arrests that did not have a `LAW_CAT_CD`, so these were categorized as `NA` in our plot. 
 
+Next, we made a parallel coordinates plot to get a better understanding of the arrests made in each borough. We categorized the types of arrests into five categories: Murder, Rape, Aggravated Assault, Motor Vehicle Theft, and Robbery. From the plot, Richmond County (Staten Island) has had the fewest number of arrests in all of these categories over the past 10 years. This is not surprising since Staten Island is the least populated of the five boroughs. The Bronx has had the most arrests related to murder with over 3500 in the past 10 years, but did not have the most arrests in any of the other four categories. Kings County (Brooklyn) had the most arrests related to rape, aggravated assault, motor vehicle theft, and robbery since 2011. While Kings County had the most arrests in all of these categories, the number of arrests varied significantly. Aggravated assault had almost 50,000 arrests and robbery had around 35,000 while there were just over 5000 arrests for rape and 3500 for motor vehicle theft. Queens County did not have the most or fewest arrests in any category, but almost had as many motor vehicle thefts as Kings County. Finally, New York County had the second fewest arrests for murder, rape, aggravated assault, and motor vehicle theft.
+
+```{r, fig.width=8, fig.height = 8}
+library(parcoords)
+nyc_coords <- nyc_arrests_categories_simple %>%
+  group_by(County) %>%
+  summarize(Murder = sum(Murder),
+            Rape = sum(Rape),
+            Aggravated.Assault = sum(Aggravated.Assault),
+            Motor.Vehicle.Theft = sum(Motor.Vehicle.Theft),
+            Robbery = sum(Robbery))
+  
+parcoords(data = nyc_coords, rownames = FALSE, reorderable = TRUE, brushMode = '1D-axes', color = list(
+        colorBy = "County", 
+        colorScale = "scaleOrdinal", 
+        colorScheme = "schemeCategory10"
+      ), 
+      withD3 = TRUE)
+```
+
 ```{r}
 nyc_arrests_perp <- nyc_arrests_combined %>%
   group_by(PERP_SEX) %>%
@@ -154,23 +176,6 @@ nyc_arrests_biggest_months <- nyc_arrests_combined %>%
 ggplot(data = nyc_arrests_biggest_months, aes(x = ARREST_MONTH, y = Number_Arrests)) + geom_col() + facet_wrap(~ ARREST_YEAR)
 ```
 
-
-```{r, fig.width=8, fig.height = 8}
-library(parcoords)
-nyc_coords <- nyc_arrests_categories_simple %>%
-  group_by(County) %>%
-  summarize(Murder = sum(Murder),
-            Rape = sum(Rape),
-            Aggravated.Assault = sum(Aggravated.Assault),
-            Motor.Vehicle.Theft = sum(Motor.Vehicle.Theft))
-  
-parcoords(data = nyc_coords, rownames = FALSE, reorderable = TRUE, brushMode = '1D-axes', color = list(
-        colorBy = "County", 
-        colorScale = "scaleOrdinal", 
-        colorScheme = "schemeCategory10"
-      ), 
-      withD3 = TRUE)
-```
 
 ## Arrests Compared to Crime
 
