--- a/04-missing.Rmd
+++ b/04-missing.Rmd
@@ -114,7 +114,7 @@ nyc_arrests <- read.table("https://data.cityofnewyork.us/api/views/uip8-fykc/row
 
 Now that we have imported our data in its original form, we will look at our dataset for missing values. Before visualizing our missing values, however, we noticed that some of the entries in the data had empty strings (""), but were not classified as NA in the dataset. Since we felt these empty strings were the equivalent of NA, we changed them in our dataset before plotting the missing values.
 
-```{r}
+```{r missing values 1}
 #First replace "" with NA
 nyc_arrests2 <- nyc_arrests %>%
   na_if("")
@@ -126,7 +126,7 @@ visna_na_plot(nyc_arrests2)
 
 From the first plot, we can see that there are 4 different patterns in our data with the most common pattern being no missing data. The plot above shows that there isn't too much missing data in our dataset, but there are still a few variables that had missing values. The most common pattern where there was missing data is for just `LAW_CA` to be missing, and this happened around 1000 times in our dataset. `LAW_CA` is the level of the offense (felony, misdemeanor or violation), so it seems this is not always documented when the arrest occurs. The second most common pattern where data was missing was for the data to be missing `KY_`, `OFN`, and `PD_D`. This pattern was far less common and occurred under 100 times out of the 115,299 observations in the data. `KY_` is an internal classification keycode,  `OFN` is a description of internal classification, and `PD_D` is a description of internal classification that is more granular than `OFN`. It seems that on occasion these codes and descriptions were not filled in when the arrest was made. The final pattern contains `KY_`, `OFN`, `PD_D` again, but also contains `PD_C`. `PD_C` is another internal classification code that is more granular than `KY_`. This pattern is very similar to previous one, but contains another missing variable that is similar to the others. We also want to plot our missing data showing percentage missing instead of number of rows missing.
 
-```{r}
+```{r missing values 2}
 #Plot NA patterns with percentages
 visna_na_plot(nyc_arrests2, percent = TRUE)
 ```
